# TTY

./: .gitignore  Cargo.toml  README.md  build.rs  bun-types.d.ts  bunfig.toml  emojis.toml  env.example  eslint.config.js  flake.nix  package.json  setup.sh  tsconfig.json
.husky/: pre-commit
.sqlx/: query-04463bb7ca005831e15fbb2773416e044f33b45880af7934bc99da0de0f652c1.json  query-0d0b3edabfb966b87c967252c51a20f8ceb962f77fe189cbe44b9ad4cc0bb8a8.json  query-1d6ffd9d99f7b9a7520d30638e4275525f2ccc4312dc790a6859451811ab66b6.json  query-1f612b9033ba9ff47bcfe182f04c913a240359154f13cee1b2e93687b6dd497c.json  query-25f0a10d405cb2f35759bb5eebacea276863f1c5321c2d72b7cae5a009c7bd12 2.json  query-2702523871f6edf697d2467a70d0ed4faf9e27109d54f4a594b97116750cd1a7 2.json  query-32178cbb547b01a65d67fc335e06b8d5b8a1f1a68df8dce90bd548b88e41873e.json  query-36336bfa8eb9820fa1053f3c71b328dc95a26f72cfbd8c54b1154afe90c882f9 2.json  query-3a0ed3d5114665f722684b14aa961b6f38f76ba8b7979c1592663709bb10565b.json  query-4c979b714b49adf25d8d151d587d5e517301d05dbbf73486813408d28e26a663.json  query-57514d1a1186505d706b0996f79770d44264e424e50e5536a738eab88b5984f5.json  query-644a753755c11c731882d2a60b619d57a6f5a7b70b10658031bff39be85cdcb0.json  query-79a82a81cdc78a5b8dd96aeae2a4dd0d56550a5d05258ddc586fc615d48dda34.json  query-83fc2976f6449767456f51d08ca4e066c3f146d2ba645e677f177aaf8a5da22c.json  query-9013e5ccef9d157bb1955c7f55c1d1e85156af17f4f0aac9ec6493f3fce98529.json  query-9e5f7d79339b969f3d117138050d560fd035250a2e5f034d2e24e2204b57db54.json  (+9 more)
assets/: emoji.json
migrations/: 001_create_enums.sql  (+2 more)
(+74 files in other folders)
