[package]
name = "tty"
version = "0.1.1"
edition = "2024"
build = "build.rs"
keywords = ["bot", "serenity", "discord"]
repository = "https://github.com/EniumRaphael/TTY"

[dependencies]
dotenvy = "0.15.7"
inventory = "0.3.21"
serenity = { version = "0.12.5", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
